example gradle build